# dfir-assistant

./: .env.example  .gitignore  bmad-progress  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.roo/commands/: bmad-omeriko-agent-omeriko.md
_bmad-output/infrastructure/: aws-dev-environment.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report.md  prd-windows-dfir-assistant-v2.md  product-brief-windows-dfir-assistant-2026-01-13.md  project-context.md  stories.md
_bmad-output/sprints/: sprint-0-plan.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml
_bmad/_config/custom/: cache-manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/core/utils/: progress-terminal.js  progress-watcher.js  trigger-progress-update.js  update-progress.js
_bmad/omeriko/: README.md  config.yaml
config/: settings.yaml  volatility_plugins.json
docs/: architecture.md  ec2-management.md  prd.md  project-brief.md  vram-validation-results.md
scripts/: run_regression.py  validate_vram.py
src/dfir_assistant/: __init__.py  config.py  main.py  models.py
src/dfir_assistant/context/: __init__.py  models.py
src/dfir_assistant/evaluation/: __init__.py  golden_dataset.py  response_metrics.py  retrieval_metrics.py
src/dfir_assistant/ingestion/: __init__.py  chunker.py  models.py  pdf_extractor.py  preprocessor.py
tests/: conftest.py
tests/fixtures/: golden_qa_dataset.json
tests/integration/: conftest.py
(+20 files in other folders)
